force-app/main/default/objects/Skill_Mapping__mdt/Skill_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Canonical skill mapping for AI CV skill normalization.</description>
    <label>Skill Mapping</label>
    <pluralLabel>Skill Mappings</pluralLabel>
</CustomObject>