force-app/main/default/objects/Skill_Mapping__mdt/fields/Canonical_Term__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Term__c</fullName>
    <label>Canonical Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>