force-app/main/default/objects/Skill_Mapping__mdt/fields/Original_Term__c.field-meta.xml
<CustomField>
    <fullName>Original_Term__c</fullName>
    <label>Original Term</label>
    <length>255</length>
    <type>Text</type>
</CustomField>